Fix the alignment with reference

--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,12 @@ body {
 header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /*grid-template-rows: 2.5rem 7rem 2.5rem 2.5rem;*/
+  grid-template-rows: 2.5rem 1fr 2.5rem 2.5rem .75rem;
   gap: .75rem;
 }
 
 header h1 {
-  margin: 1rem 1.5rem;
+  margin: 0 1.5rem;
   font-size: 1.8rem;
   font-weight: normal;
   font-style: italic;
@@ -66,7 +66,7 @@ header p {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /*grid-template-rows: 7rem 7rem;*/
+  grid-template-rows: 1fr 1fr;
   grid-template-areas:
     "box1 box2 box3"
     "box4 box5 box6";
